feat(relations): added relations and unique feature