@@ -34,6 +34,9 @@
               <version>1.4.2.Final</version>
             </path>
           </annotationProcessorPaths>
+          <source>17</source>
+          <target>17</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
         <groupId>org.apache.maven.plugins</groupId>
         <version>3.8.1</version>
